# SMTR

./: .gitignore  README.md  changelog.md  implementation.md  method.md  plan.md  pyproject.toml  requirements-marble.txt  results.md  results_llm.md  results_llm_cn.md  results_new.md  run_smtr_tau3.py  test  test_s7_real_llm.py  todo.md
.codex/: smtr_robust_decoupling_audit.md
checkpoints/: critic_full_gate_ablation_v1.joblib  critic_full_gate_ablation_v1.metadata.json  critic_no_selected_set_v1.joblib  critic_no_selected_set_v1.metadata.json  critic_pi0.joblib  critic_pi0.metadata.json  critic_pi0.metrics.json  critic_pi1.joblib  critic_pi1.metadata.json  critic_pi1.metrics.json  critic_pi2.joblib  critic_pi2.metadata.json  critic_pi2.metrics.json  critic_pi2_interaction.joblib  critic_pi2_interaction.metadata.json  critic_pi2_interaction.metrics.json  critic_pi2_s2.joblib  critic_pi2_s2.metadata.json  critic_pi2_s2.metrics.json  critic_pi2_s4.joblib  critic_pi2_s4.metadata.json  critic_pi2_s4.metrics.json  critic_pi3_v17.joblib  critic_pi3_v17.metadata.json  critic_pi3_v18.joblib  critic_pi3_v18.metadata.json  critic_pi3_v19.joblib  critic_pi3_v19.metadata.json  critic_pi3_v19.metrics.json  critic_pi3_v20.joblib  critic_pi3_v20.metadata.json  critic_pi3_v20.metrics.json  critic_pi3_v21.joblib  critic_pi3_v21.metadata.json  critic_pi3_v21.metrics.json  critic_pi3_v22.joblib  critic_pi3_v22.metadata.json  critic_pi3_v22.metrics.json  test_transfer_critic.joblib  test_transfer_critic.metadata.json  (+3 more)
conf/: llm_test_config.json
data/: gate_ablation_formal.sqlite  gate_ablation_smoke.sqlite  memory_compare_all_scenarios.sqlite  memory_compare_scenario_smoke.sqlite  memory_compare_smoke.sqlite  paired_records.jsonl  paired_records_pi3_v16.jsonl  robust_smtr_smoke.sqlite  smtr_decoupled_smoke.sqlite  smtr_memory.sqlite  smtr_memory_v2.sqlite  tau3_retail_memory_pool.json  tau3_retail_train_trajectories_test.jsonl  test_v11.jsonl  (+3 more)
(+500 files in other folders)
