[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smtr"
version = "0.1.0"
description = "Shared Memory Transfer Router research prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2",
  "joblib>=1.4",
  "numpy>=1.26",
  "pydantic>=2",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]
llm = [
  "torch>=2.1",
  "transformers>=4.40",
  "accelerate>=0.28",
  "bitsandbytes>=0.43",
]
api = [
  "fastapi>=0.111",
  "uvicorn>=0.29",
  "httpx>=0.27",
]
marble = [
  "litellm>=1.52.1,<2.0.0",
  "psycopg2-binary>=2.9.10,<3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/smtr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
  "marble: tests that touch the local MARBLE checkout or real MARBLE adapters",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".codex",
  ".conda",
  ".cursor",
  ".cursor-server",
  "anaconda3",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
